Navigation Bar, Tab and Title
Navigation Bar, Tab and Title

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 -->
 <html>
 	<head>
-		<title>Untitled</title>
+		<!-- <title>Untitled</title> -->
+		<title>Stanwix Australia</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -19,11 +20,44 @@
 
 		<!-- Header -->
 			<header id="header" class="alt">
-				<h1><a href="index.html">Slate <span>by Pixelarity</span></a></h1>
+				<!-- <h1><a href="index.html">Slate <span>by Pixelarity</span></a></h1> -->
+				<h1><a href="index.html">Stanwix Australia <span>by Goran Stankovic</span></a></h1>
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li>
+							<a href="#" class="submenu fa-angle-down">Home</a>
+							<ul>
+								<li><a href="#">About</a></li>
+								<li><a href="#">Executive Team</a></li>
+								<li><a href="#">Investors</a></li>
+							</ul>
+						</li>
+						<li>
+							<a href="#" class="submenu fa-angle-down">Business Types</a>
+							<ul>
+								<li><a href="#">Small Business</a></li>
+								<li><a href="#">Small to Mid Enterprise</a></li>
+								<li><a href="#">Enterprise</a></li>
+							</ul>
+						</li>
+						<li>
+							<a href="#" class="submenu fa-angle-down">Services and Solutions</a>
+							<ul>
+								<li><a href="#">Services</a></li>
+								<li><a href="#">Solutions</a></li>
+								<li><a href="#">Industries</a></li>
+							</ul>
+						</li>
+						<li>
+							<a href="#" class="submenu fa-angle-down">Contact</a>
+							<ul>
+								<li><a href="#">Support</a></li>
+								<li><a href="#">Accounts</a></li>
+								<li><a href="#">Technical Support</a></li>
+							</ul>
+						</li>
+						<!-- <li>
 							<a href="#" class="submenu fa-angle-down">Page Layouts</a>
 							<ul>
 								<li><a href="left-sidebar.html">Left Sidebar</a></li>
@@ -39,7 +73,7 @@
 									</ul>
 								</li>
 							</ul>
-						</li>
+						</li> -->
 						<li><a href="elements.html">Elements</a></li>
 						<li><a href="#" class="button">Sign Up</a></li>
 					</ul>
