Updated Nav bar headings
Updated Nav bar headings

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				<h1><a href="index.html">Stanwix Australia <span>by Goran Stankovic</span></a></h1>
 				<nav id="nav">
 					<ul>
-						<li><a href="index.html">Home</a></li>
+						<!-- <li><a href="index.html">Home</a></li> -->
 						<li>
 							<a href="#" class="submenu fa-angle-down">Home</a>
 							<ul>
@@ -74,7 +74,7 @@
 								</li>
 							</ul>
 						</li> -->
-						<li><a href="elements.html">Elements</a></li>
+						<!-- <li><a href="elements.html">Elements</a></li> -->
 						<li><a href="#" class="button">Sign Up</a></li>
 					</ul>
 				</nav>
