--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<!-- Header -->
 			<header id="header" class="alt">
 				<!-- <h1><a href="index.html">Slate <span>by Pixelarity</span></a></h1> -->
-				<h1><a href="index.html">Stanwix Australia <span>by Goran Stankovic</span></a></h1>
+				<h1><a href="index.html">Stanwix Australia <span>(DevEnv)</span></a></h1>
 				<nav id="nav">
 					<ul>
 						<!-- <li><a href="index.html">Home</a></li> -->
@@ -37,7 +37,7 @@
 							<a href="#" class="submenu fa-angle-down">Business Types</a>
 							<ul>
 								<li><a href="#">Small Business</a></li>
-								<li><a href="#">Small to Mid Enterprise</a></li>
+								<li><a href="#">Small to Mid Market Enterprise</a></li>
 								<li><a href="#">Enterprise</a></li>
 							</ul>
 						</li>
@@ -85,6 +85,24 @@
 				<article>
 					<img src="images/slide01.jpg" alt="" />
 					<div class="inner">
+						<h2><a href="#">Changing the mindset of communities .</a></h2>
+					</div>
+				</article>
+				<article>
+					<img src="images/slide02.jpg" alt="" />
+					<div class="inner">
+						<h2><a href="#">Assisting humanity Technologies.</a></h2>
+					</div>
+				</article>
+				<article>
+					<img src="images/slide03.jpg"  alt="" />
+					<div class="inner">
+						<h2><a href="#">Emerging business enviornments.</a></h2>
+					</div>
+				</article>
+				<!-- <article>
+					<img src="images/slide01.jpg" alt="" />
+					<div class="inner">
 						<h2><a href="#">Magna tempus. Sed feugiat.</a></h2>
 					</div>
 				</article>
@@ -99,7 +117,7 @@
 					<div class="inner">
 						<h2><a href="#">Consequat dolore adipiscing.</a></h2>
 					</div>
-				</article>
+				</article> -->
 			</section>
 
 		<!-- One -->
