Section One Updated
Section One Content Updated

--- a/index.html
+++ b/index.html
@@ -125,8 +125,22 @@
 				<div class="inner">
 					<section class="spotlight">
 						<div class="content">
-							<h2>Libero bibendum nullam vitae magna sed veroeros</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin id interdum magna, ultricies aliquet curabitur sed metus pellentesque, ornare sapien quis.</p>
+							<h3>Welcome to Stanwix Australia</h3>
+							<p>Times have changed and the market place is only going to get more competitive. 
+							Gaining new customers through emerging avenues is becoming more reliant on technology, takes time and continually increases costs. 
+							This means that organisations are struggling to find ways to attract new customers. 
+							STANWIX believes that most organisations have the information at arms-length, however, due to lack of understanding or poor translation of the communication, they fail to take action. 
+							STANWIX simplifies the communication process by working closely with your senior executives (CXO) to provide easy-to-read reporting based on the selection criteria specified by your organisation. 
+							STANWIX provides organisations with visual outcomes that assist you in making those important decisions.</p>
+							<h4>WHEN DO YOU NEED STANWIX BUSINESS INTELLIGENCE</h4>
+							<p>In today’s busy market place, customers are equipped with smartphones and tablets, so they can buy anywhere at any time. 
+							They make decisions based on their interaction with social networks, and they no longer need to go to a store and nor do they want to. 
+							Everything is just a click away. 
+							STANWIX can provide you with the business intelligence that can help you today. 
+							You may not know it yet, but you could be sitting on a pot of gold within your organization. 
+							However, if you can’t translate this important information and use it to make effective business decisions, then you are giving away your customers. 
+							Customers make decisions quickly and their loyalty is twice as hard to obtain once lost. 
+							STANWIX can prevent that from happening.</p>
 						</div>
 						<span class="image"><img src="images/pic07.jpg" alt="" /></span>
 					</section>
