Section Two Updated
Section Two Content Updated

--- a/index.html
+++ b/index.html
@@ -132,15 +132,6 @@
 							STANWIX believes that most organisations have the information at arms-length, however, due to lack of understanding or poor translation of the communication, they fail to take action. 
 							STANWIX simplifies the communication process by working closely with your senior executives (CXO) to provide easy-to-read reporting based on the selection criteria specified by your organisation. 
 							STANWIX provides organisations with visual outcomes that assist you in making those important decisions.</p>
-							<h4>WHEN DO YOU NEED STANWIX BUSINESS INTELLIGENCE</h4>
-							<p>In today’s busy market place, customers are equipped with smartphones and tablets, so they can buy anywhere at any time. 
-							They make decisions based on their interaction with social networks, and they no longer need to go to a store and nor do they want to. 
-							Everything is just a click away. 
-							STANWIX can provide you with the business intelligence that can help you today. 
-							You may not know it yet, but you could be sitting on a pot of gold within your organization. 
-							However, if you can’t translate this important information and use it to make effective business decisions, then you are giving away your customers. 
-							Customers make decisions quickly and their loyalty is twice as hard to obtain once lost. 
-							STANWIX can prevent that from happening.</p>
 						</div>
 						<span class="image"><img src="images/pic07.jpg" alt="" /></span>
 					</section>
@@ -153,18 +144,33 @@
 					<div class="features">
 						<section class="content">
 							<span class="icon-wrapper major"><span class="icon fa-pencil"></span></span>
-							<h3>Praesent sed donec</h3>
-							<p>Proin consequat luctus elit, nec blandit tellus ut volutpat magna. mi euismod elementum lectus et consequat etiam lorem etiam sed tempus. Feugiat veroeros lorem ipsum dolor.</p>
+							<h3>WHEN DO YOU NEED STANWIX bUSINESS iNTELLIGENCE</h3>
+							<p>In today’s busy market place, customers are equipped with smartphones and tablets, so they can buy anywhere at any time. 
+							They make decisions based on their interaction with social networks, and they no longer need to go to a store and nor do they want to. 
+							Everything is just a click away. 
+							STANWIX can provide you with the business intelligence that can help you today. 
+							You may not know it yet, but you could be sitting on a pot of gold within your organization. 
+							However, if you can’t translate this important information and use it to make effective business decisions, then you are giving away your customers. 
+							Customers make decisions quickly and their loyalty is twice as hard to obtain once lost. 
+							STANWIX can prevent that from happening.</p>
 						</section>
 						<section class="content">
 							<span class="icon-wrapper major"><span class="icon fa-paper-plane"></span></span>
-							<h3>Commodo mollis</h3>
-							<p>Pellentesque, ornare sapien quis, tristique ante. Proin nec facilisis odio. Integer elementum nunc nec leo interdum, non tristique eros laoreet. Integer vitae erat suscipit commodo.</p>
+							<h3>MID-MARKET AND ENTERPRISE - HOW WE CAN HELP YOU</h3>
+							<p>We have secure IT Solutions for mid-sized enterprises that put you in control of maximising the value of your IT environment. 
+							Stanwix provides integrated communication solutions and systems for businesses. 
+							In today's rapidly changing world of technology, customers seek customised solutions to underpin their organization and business processes. 
+							Stanwix creates additional value with our ongoing commitment to reliability, customer service and excellence.</p>
 						</section>
 						<section class="content">
 							<span class="icon-wrapper major"><span class="icon fa-cloud"></span></span>
-							<h3>Magnis curabitur</h3>
-							<p>Duis vulputate sit amet metus quis facilisis. Sed dapibus neque erat fringilla tincidunt. Nullam sapien et sapien, iaculis ac varius ultrices nec metus. Aenean ultricies magna.</p>
+							<h3>SMALL BUSINESS - IS OUR BUSINESS</h3>
+							<p>We understand your security, reliability and productivity needs might be the same as larger companies, 
+								however, you may not necessarily have the same access to resources or expertise. 
+								At STANWIX we specialize in delivering reliable and stable communication services that help businesses grow and thrive. 
+								STANWIX can help you build and manage any change to your company's infrastructure, so that you can leverage the right technology to successfully grow your business. 
+								STANWIX will provide a solution to support your unique business objectives, 
+								improve your competitive position, and increase your operational efficiency with services and solutions that require minimal capital investment..</p>
 						</section>
 					</div>
 				</div>
